# qgendapy

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: getting-started.md  index.md  migration.md
docs/api/: client.md  compat.md  config.md  exceptions.md  index.md  odata.md  response.md
docs/api/resources/: company.md  credentialing.md  credit.md  daily.md  daily_case.md  facility.md  integration.md  notification.md  organization.md  pay.md  profile.md  request.md  request_limit.md  schedule.md  staff.md  staff_target.md  support.md  tag.md  task.md  time_event.md  user.md
docs/stylesheets/: extra.css
examples/: async_client.py  basic_usage.py  context_manager.py  crud_operations.py  env_config.py  error_handling.py  migrate_from_python_qgenda.py  odata_filtering.py
src/qgendapy/: __init__.py  _auth.py  _cache.py  _config.py  _transport.py  client.py  compat.py  exceptions.py  odata.py  response.py
src/qgendapy/models/: __init__.py  common.py  company.py  credentialing.py  daily.py  facility.py  organization.py  pay.py  request.py  schedule.py  staff.py  task.py  time_event.py
src/qgendapy/resources/: __init__.py  _base.py  company.py  credentialing.py  credit.py  daily.py  daily_case.py  facility.py  integration.py  notification.py  organization.py  pay.py  profile.py  request.py  request_limit.py  schedule.py  staff.py  staff_target.py  support.py  tag.py  task.py  time_event.py  user.py
tests/: conftest.py  test_auth.py  test_cache.py  test_client.py  test_compat.py  test_config.py  test_exceptions.py  test_models_common.py  test_odata.py  test_response.py  test_schedule_chunking.py  test_transport.py
tests/resources/: test_async_resources.py  test_company.py  test_credentialing.py  test_credit.py  test_daily.py  test_daily_case.py  test_facility.py  test_integration.py  test_notification.py  test_organization.py  test_pay.py  test_profile.py  test_request.py  test_request_limit.py  test_schedule.py  test_staff.py  test_staff_target.py  test_support.py  test_tag.py  test_task.py  test_time_event.py  test_user.py
