[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qgendapy"
version = "0.1.1"
description = "Modern Python client for the QGenda REST API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Lance Reinsmith" },
]
keywords = ["qgenda", "api", "scheduling", "healthcare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/lancereinsmith/qgendapy"
Repository = "https://github.com/lancereinsmith/qgendapy"
Documentation = "https://lancereinsmith.github.io/qgendapy/"
Issues = "https://github.com/lancereinsmith/qgendapy/issues"

[project.optional-dependencies]
redis = ["redis>=5.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
docs = [
    "zensical>=0.0.28",
    "mkdocstrings[python]>=1.0.3",
    "rumdl>=0.1.57",
]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
    "htmlcov",
    ".cache",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint
    "PERF",  # perflint
    "RUF",   # ruff-specific rules
]
ignore = [
    "N803",   # Argument name should be lowercase (allow camelCase for API client)
    "E501",    # Line too long (handled by formatter)
    "PLR2004", # Magic value in comparison (too noisy, especially in tests)
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PTH",     # Use pathlib (prefer gradual migration, not enforced)
    "RET504",  # Unnecessary assignment before return
    "RET505",  # Unnecessary else after return
    "DTZ005",  # datetime.now() without timezone (not all apps need timezone-aware)
    "SIM105",  # Use contextlib.suppress (try/except is often clearer)
    "SIM102",  # Collapsible if (sometimes separate ifs are clearer)
    "SIM117",  # Use single with statement (nested is often clearer)
    "PLW0108", # Lambda may be unnecessary; consider inlining inner function
    "PLW1510", # subprocess.run without check (handled case-by-case)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLC0415",  # Import outside top-level (tests often need scoped imports)
    "PLR2004",  # Magic values (test assertions with status codes, etc.)
    "F841",     # Unused variable (fixtures, etc.)
    "PT001",    # Use @pytest.fixture() over @pytest.fixture
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Ty Environment
[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/qgendapy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--verbose"]
asyncio_mode = "auto"

[tool.rumdl]
flavor = "mkdocs"
respect-gitignore = true
exclude = ["node_modules", "build", "dist"]
disable = [
    "MD013", # Line length: Allows lines longer than the default limit for better readability in technical docs
]
